Fix text-align on single news

--- a/_sass/pages/_single-news.scss
+++ b/_sass/pages/_single-news.scss
@@ -15,4 +15,7 @@
 			color:#0087cd;
 		}
 	}
+	.p_news{
+		text-align:left !important;
+	}
 }
